--- a/src/components/immobili/immobili.css
+++ b/src/components/immobili/immobili.css
@@ -48,7 +48,6 @@ width: 100%;
 /* float: left; */
 display: inline-block;
 padding: 15px;
-background: #fffeff;
 }
 #listings .search-area input[type="text"] {
 width: 70%;
@@ -95,9 +94,9 @@ color: darkgrey;
 background: #fff;
 border-radius: 5px;
 margin-bottom: 60px;
--webkit-box-shadow: 0px 9px 54px -4px rgba(224, 224, 224, 1);
--moz-box-shadow: 0px 9px 54px -4px rgba(224, 224, 224, 1);
-box-shadow: 0px 9px 54px -4px rgba(224, 224, 224, 1);
+-webkit-box-shadow: 0px 9px 54px -4px var(--color-footer);
+-moz-box-shadow: 0px 9px 54px -4px var(--color-footer);
+box-shadow: 0px 9px 54px -4px var(--color-footer);
 }
 #listings .listings-results .listing-img {
 color: #fff;
@@ -133,13 +132,14 @@ opacity: 1;
 opacity: 0;
 }
 #listings .listings-results .listing-img .address {
+color: var(--selection-color);
 font-size: 1rem;
 text-transform: capitalize;
 position: absolute;
 bottom: 20px;
 opacity: 1;
 transition: all 0.4s ease-in-out;
-text-shadow: 0px 1px 4px rgba(91, 91, 91, 1);
+/* text-shadow: 0px 1px 4px rgba(91, 91, 91, 1); */
 background-color:var(--selection-b-color);
 padding: 5px 10px;
 border-radius: 5px;
