--- a/src/App.css
+++ b/src/App.css
@@ -95,8 +95,8 @@ a {
   top: 0%;
   left: 0%;
   z-index: 1000;
-  padding-left: 2vw;
-  padding-top: 26px;
+  padding-left: 1vw;
+  padding-top: 3em;
   width: 48px;
   height: 48px;
   
