--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,9 +6,10 @@
     vertical-align: middle;
     font-size: 1.5rem;
     color: var(--color-text);
-    margin-bottom: 0.4em;
+    /* margin-bottom: 0.4em; */
     padding-right: 2vw;
     margin-right: 16px;
+    /* padding-top: 3em; */
 }
 
 .header-box{
