--- a/src/components/immobili/immobili.css
+++ b/src/components/immobili/immobili.css
@@ -24,6 +24,10 @@
   margin: 0.2em;
 }
 
+.my-col-9 {
+  font-size: 1.1rem;
+}
+
 @media screen and (max-width: 1120px) {
   .my-col, .my-col-9 {
     flex: 0 0 30%;   /* Below 768px, each column takes full width */
@@ -216,6 +220,7 @@ top: 3px;
 }
 #listings .listings-results .listing-img .details .listing-details .floor-space {
 margin-bottom: 1px;
+font-size: 1.1rem;
 }
 #listings .listings-results .post-date {
 font-size: 0.6rem;
