--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/*Remove the highlight blue background color from mobile*/
+p/*Remove the highlight blue background color from mobile*/
 input,
 textarea,
 button,
@@ -54,9 +54,9 @@ body {
 }
 
 
-p {
+/* p {
 text-align: center;
-}
+} */
 
 a {
   font-weight: bold;
