--- a/src/components/immobili/ImmobiliPostPage-style.css
+++ b/src/components/immobili/ImmobiliPostPage-style.css
@@ -1,8 +1,6 @@
-/* .post-page-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
+.post-page-container {
+width: 90%;
+}
 
 
 .video-background {
