--- a/src/components/intro/intro-style.css
+++ b/src/components/intro/intro-style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;1,300&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap');
 
 h1, body, html, ::placeholder, input, textarea {
@@ -13,7 +12,7 @@ h1, body, html, ::placeholder, input, textarea {
 }
 
 :root {
-    --vh: 100vh;
+    --vh: 5vh;
 }
 
 .intro-section {
@@ -21,7 +20,7 @@ h1, body, html, ::placeholder, input, textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: var(--vh);
+  height: 70vh;
   /* padding: 1.5rem; */
   overflow: hidden;
 
@@ -30,7 +29,6 @@ h1, body, html, ::placeholder, input, textarea {
 .intro-section::before, .intro-section::after {
   content: "";
   position: absolute;
-  /* background-image: url('../../assets/poppies.webp'); */
   top: 0;
   left: 0;
   height: var(--vh);
@@ -64,7 +62,8 @@ h1, body, html, ::placeholder, input, textarea {
         flex: 1;
         font-size: 3.5rem;
         text-align: center;
-        margin-top: -40vh;
+        justify-content: center;
+        /* margin-top: -40vh; */
         position: static;
 }
 
