adding edit page and finishing backend

--- a/src/App.css
+++ b/src/App.css
@@ -88,14 +88,9 @@ a {
   border: none;
   cursor: pointer;
   display: flex;
-  /* align-items: center; */
-  /* justify-content: left; */
-  position: fixed;
-  top: 0%;
-  left: 0%;
+  align-items: center;
+  justify-content: left;
   z-index: 1000;
-  padding-left: 1vw;
-  padding-top: 3em;
   width: 48px;
   height: 48px;
   
@@ -103,7 +98,11 @@ a {
 
 .icon-container {
   position: relative;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 1em;
+  padding-right: 1em;
   height: 100%;
   perspective: 1000px; /* this allows for the 3D effect */
 }
@@ -128,10 +127,14 @@ a {
   transform: rotateY(180deg); /* initially hide the sun icon */
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
 
   .theme-switch-button {
     left: -2%;
+  }
+
+  .moon-icon, .sun-icon {
+    height: 1.2rem;
   }
 
 }
