--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,20 +2,33 @@
     display: flex;
     justify-content: right;
     align-items: center; 
-    gap: 16px; 
+    gap: 1em; 
     vertical-align: middle;
     font-size: 1.5rem;
     color: var(--color-text);
     /* margin-bottom: 0.4em; */
     padding-right: 2vw;
-    margin-right: 16px;
+    /* margin-right: 16px; */
     /* padding-top: 3em; */
+}
+
+.header-logo{
+  cursor: pointer;
+  display: flex;
+  justify-content: left;
+  align-items: center; 
+  gap: 16px; 
+  vertical-align: middle;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--color-text);
+  padding-left: 2vw;
 }
 
 .header-box{
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: space-between;
     position: sticky;
     top: 0%;
     height: 100px;
@@ -95,7 +108,15 @@
 
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
+  #home {
+    display: none;
+  }
+  .header-logo,
+  .header-nav{
+    font-size: 1.1rem;
+    gap: 0.1em;
+  }
 
 
 }
