--- a/src/components/immobili/ImmobiliPostPage-style.css
+++ b/src/components/immobili/ImmobiliPostPage-style.css
@@ -1,5 +1,27 @@
+.parent-container {
+  padding: 3em;
+  display: flex;
+  flex-direction: row;
+  gap: 5em;
+}
+.main-gallery img{
+border-radius: 10px;
+max-width: 50vw;
+max-height: 60vh;
+}
+
+.slick-list {
+  width: 70%;
+}
+
+.thumb-gallery img{
+  border-radius: 5px;
+  width: 25%;
+  }
+
 .post-page-container {
-width: 90%;
+  flex: 1;
+  /* width: 30%; */
 }
 
 .pac-logo::after {
@@ -12,14 +34,14 @@ width: 90%;
   font-family: 'Josefin Sans', sans-serif;
 }
 
-.leaflet-control{
+.leaflet-control-attribution{
   display: none;
 }
 
 .map-immobile {
+  flex: 2;
   margin-top: 5em;
-  width: 70%;
-  height: 50vh;
+  /* width: 40%; */
   overflow: 'hidden';
 }
 
@@ -71,3 +93,32 @@ body[data-theme="dark"] .download-btn {
     pointer-events: none;
   }
 /* Add more specific styles for other elements like lists, blockquotes, code, etc. */
+@media screen and (max-width: 850px) {
+  .parent-container {
+    padding: 2em;
+    display:block;
+  }
+
+  .main-gallery img{
+    border-radius: 10px;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    }
+
+  .thumb-gallery img{
+    border-radius: 5px;
+    width: 60%;
+    }
+
+  .slick-list {
+    width: 90%;
+  }
+
+  .map-immobile {
+    /* flex: 2; */
+    height: 30em;
+    width: 100%;
+    overflow: 'hidden';
+  }
+}
