--- a/src/components/immobili/immobili.css
+++ b/src/components/immobili/immobili.css
@@ -15,7 +15,8 @@
   padding: 3em;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 3em;
 }
 
 .my-col{
