updating with new functionalities

--- a/src/components/createpost/create-post-style.css
+++ b/src/components/createpost/create-post-style.css
@@ -1,6 +1,10 @@
+#modifyAddress {
+    width: 25px;
+}
+
 .lbl {
     text-align: right;
-    width: 100px;
+    /* width: 100px; */
     white-space: nowrap;
 }
 
