--- a/src/components/immobili/ImmobiliPostPage-style.css
+++ b/src/components/immobili/ImmobiliPostPage-style.css
@@ -5,6 +5,11 @@
   gap: 5em;
   min-height: 60vh;
 }
+
+.main-gallery {
+  flex: 1;
+  max-width: 70%;
+}
 .main-gallery img{
 border-radius: 10px;
 max-width: 50vw;
@@ -15,9 +20,27 @@ max-height: 60vh;
   width: 70%;
 }
 
+.slick-prev::before, .slick-next::before {
+  color: var(--color-text)!important;
+  font-size: 1.8rem!important;
+}
+
+.thumb-gallery .slick-prev::before, 
+.thumb-gallery .slick-next::before {
+    display: none;
+}
+
+.thumb-gallery {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+  gap: 1em;
+  width: 40%;
+}
+
 .thumb-gallery img{
   border-radius: 5px;
-  width: 25%;
+  width: 80%;
   }
 
 .post-page-container {
@@ -94,10 +117,28 @@ body[data-theme="dark"] .download-btn {
     pointer-events: none;
   }
 /* Add more specific styles for other elements like lists, blockquotes, code, etc. */
-@media screen and (max-width: 850px) {
+
+  @media screen and (max-width: 1250px) {
+    .thumb-gallery {
+      width: 50%;
+    }
+    .main-gallery {
+      max-width: 85%;
+    }
+
+  }
+
+  @media screen and (max-width: 850px) {
   .parent-container {
     padding: 2em;
     display:block;
+  }
+  .slick-prev::before, .slick-next::before {
+    display: none;
+  }
+
+  .main-gallery {
+    max-width: 100%;
   }
 
   .main-gallery img{
@@ -106,6 +147,10 @@ body[data-theme="dark"] .download-btn {
     max-width: 100%;
     max-height: 100%;
     }
+
+  .thumb-gallery {
+    width: 100%;
+  }
 
   .thumb-gallery img{
     border-radius: 5px;
